[project]
name = "orchex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[pool]>=3.2.12",
]

[project.scripts]
orchex = 'orchex.cli:main'

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "pytest>=8.3.0",
]
