[project]
name = "orchex"
version = "0.1.0"
description = "Postgres-backed mini python orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[pool]>=3.2.12",
]

[project.scripts]
orchex = 'orchex.cli:main'

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "pytest>=8.3.0",
    "mypy>=1.18.2",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "FAST", "UP", "RUF", "B"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
incremental = true
sqlite_cache = true
cache_dir = ".mypy_cache"

[tool.pytest.ini_options]
testpaths = ["tests"]
